# docker-learning

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
scripts/: docker-build.sh  docker-run.sh
