[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "docker-learning"
version = "0.0.0"
description = "Messing about in Docker"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2"
