[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "docker-learning"
version = "0.0.0"
description = "Messing about in Docker"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9"
fastapi = "^0.63"
loguru = "^0.5"
lxml = "^4.6"
requests = "^2.25"
uvicorn = "^0.13"

[tool.poetry.dev-dependencies]
pre-commit = "^2"
