[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "docker-learning"
version = "0.0.0"
description = "Messing about in Docker"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
loguru = "^0.5.3"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = { git = "https://github.com/psf/black" }
flake8 = "^3.9.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.4.0"
flake8-implicit-str-concat = "^0.2.0"
flake8-mutable = "^1.2.0"
flake8-simplify = "^0.14.0"
flake8-typing-imports = "^1.10.1"
flake8-unused-arguments = "^0.0.6"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.0"
